update for production

--- a/index.html
+++ b/index.html
@@ -16,7 +16,12 @@
     <script type="text/babel">
         class App extends React.Component {
             render() {
-                return <div>текст</div>;
+                return (
+                    <div>
+                        <p>Hello World!</p>   
+                        <p>My name is Andrey</p>   
+                    </div>
+                );
             }
         }
 
