need fix gulp webpack

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
     </header>
 
     <section class="content">
-        Content
+        <div id="content"></div>
     </section>
     
     <footer class="footer">
