--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     //= template/header.html
 
     <section class="content">
-        Content
+        <div id="content"></div>
     </section>
     
     //= template/footer.html
