--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,9 @@
     <section class="content">
         <div id="content"></div>
     </section>
-    
+
     //= template/footer.html
     <script src="js/main.js"></script>
+    <script src="js/bundle.js"></script>
 </body>
 </html>
