add webpack to gulpfile

--- a/src/index.html
+++ b/src/index.html
@@ -6,14 +6,9 @@
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    //= template/header.html
-
-    <section class="content">
-        <div id="content"></div>
-    </section>
-
-    //= template/footer.html
-    <script src="js/main.js"></script>
+    <!-- //= template/header.html -->
+    <div id="root"></div>
+    <!-- //= template/footer.html -->
     <script src="js/bundle.js"></script>
 </body>
 </html>
