add content list

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- //= template/header.html -->
-    <div id="root"></div>
+    <div id="root" class="content"></div>
     <!-- //= template/footer.html -->
     <script src="js/bundle.js"></script>
 </body>
